--- a/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
@@ -108,6 +108,11 @@
          #blogTable_filter {
             display: none !important;
         }
+
+         #faciSolicitudes_filter {
+            display: none !important;
+        }
+
     </style>
 </head>
 
