--- a/WebApplication1/Areas/coadmin/Views/titulares/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/listado.cshtml
@@ -170,7 +170,7 @@
                                                 <a href="@Url.Action("listadoTitulos", "titulares", new { area = "coadmin", id = item.id })"
                                                    class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
                                                    data-toggle="tooltip" data-placement="top" title="Propiedades">
-                                                    <i class="mdi mdi-home"></i>
+                                                    <i class="mdi mdi-home"></i>@item.Titulos.Count
                                                 </a>
                                                 <a href="#">
                                                     <button type="button" onclick="onDeleteTitulares(this)" data-id="@item.id"
