--- a/WebApplication1/Views/control/listadoTitulos.cshtml
+++ b/WebApplication1/Views/control/listadoTitulos.cshtml
@@ -110,7 +110,7 @@
                                             <a href="@Url.Action("listadoVehiculos", "control", new { id = item.Id })"
                                                class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
                                                data-toggle="tooltip" data-placement="top" title="Listado Vehículos">
-                                                <i class="mdi mdi-car"></i>
+                                                <i class="mdi mdi-car"></i>@item.Vehiculos.Count
                                             </a>                                            
                                         </td>
 
